--- a/src/1_WeatherPage/weather.css
+++ b/src/1_WeatherPage/weather.css
@@ -7,7 +7,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    position: relative;
+    position: fixed;
 
     animation: fadeIn 2s;
     -webkit-animation: fadeIn 2s;
@@ -41,6 +41,10 @@ h2, h3, h4 {
     margin-top: 10px;
 }
 
+.percent {
+    margin-bottom: 5px;
+}
+
 .divAnimation {
     text-align: center;
     position: relative;
@@ -55,36 +59,16 @@ h2, h3, h4 {
    margin-left: -140px;
 }
 
-.weather_card h3 {
+.weather_card h2 {
     display: grid;
     align-items: center;
-    background: rgba(0, 0, 0, 0.4);
+    background: rgba(255, 255, 255, 0.1);
     padding: 1rem;
     border-radius: 10px;
-    border-style: solid;
-    border-color: rgba(255, 255, 255, 0.2);
-    margin-top: 12px;
 }
 
-.forecast h3{
+.forecast{
     display: inline-flexbox;
-    background: rgba(0, 0, 0, 0.4);
-    padding: 1rem;
-    border-radius: 10px;
-    border-style: solid;
-    border-color: rgba(255, 255, 255, 0.2);
-}
-
-.weathericon {
-    font-size: 40px;
-    color: white;
-    display: inline-block;
-    align-items: center;
-    margin-left: 250px;
-}
-
-p {
-    font-size: 20px;
 }
 
 @keyframes fadeIn {
