--- a/src/1_WeatherPage/weather.css
+++ b/src/1_WeatherPage/weather.css
@@ -7,7 +7,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    position:static;
+    position:absolute;
 
     animation: fadeIn 2s;
     -webkit-animation: fadeIn 2s;
